[package]
name = "spw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "spw"
path = "src/spw.rs"


[dependencies]
env_logger = "0.9.0"
lazy_static = "1.4.0"
libffi = "3.0.1"
log = "0.4.17"
spw-sys = { path = "../spw-sys" }
thiserror = "1.0.34"
