[package]
name = "spw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "spw"
path = "src/spw.rs"


[dependencies]
env_logger = "0.9"
lazy_static = "1"
libffi = "3"
log = "0.4"
spw-sys = { path = "../spw-sys" }
thiserror = "1"
